bk_ida/gccida/c1/gen_decl_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11879:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11880:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11881:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11883:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11885:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11911:26: error: use of undeclared identifier 'debug_info_level_0'
else if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11929:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11933:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/dwarf2out.c:11955:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_decl_die/src/obj/dwarf2out.o] Error 1
